--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -28,7 +28,7 @@ import { Image } from "astro:assets";
             target="_blank">Reviews</a
           ></li
         >
-        <li><a href="/blog">Blog</a></li>
+        <li><a href="https://blog.hammerheadcozumel.com/">Blog</a></li>
       </div>
     </div>
     <span class="line"></span>
