--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -41,13 +41,6 @@ import MiniLinks from "../components/MiniLinks.astro";
       alt="Claudia"
     />
     <br />
-    <StaffReversed
-      name="Jesus"
-      role="General Manager & Head Dive Master"
-      description="Fluent in both Spanish and English, with over 26 years of experience as a Divemaster in Cozumel, Jesus stands out for his unmatched expertise in guiding dives in these waters. Few locals can rival his knowledge. Jesus excels in tailoring dives to match each diver's experience and skill level. Advocating the 'dive your tank' approach, he is passionate about his work, evident in his dedication. In his own words, 'You may be a tourist, but to us, you're family,' so you don't have to dive like a tourist."
-      img="/Jesus.jpg"
-      alt="Jesus"
-    />
     <br />
     <Staff
       name="Jeobani"
@@ -92,9 +85,9 @@ import MiniLinks from "../components/MiniLinks.astro";
     text1="Cozumel, Mexico, boasts vibrant coral reefs and diverse marine life, offering unforgettable diving and snorkeling experiences in crystal-clear waters."
     text2="Dive into the enchanting phenomenon of bioluminescence in the ocean, where organisms emit light through chemical reactions, from tiny plankton to deep-sea fish"
     text3="Manta rays, massive yet gentle filter feeders, navigate oceans with grace, captivating observers worldwide. Threatened by habitat loss and targeted fishing, conservation efforts focus on safeguarding their habitats and regulating trade."
-    link1="/blog"
-    link2="/blog"
-    link3="/blog"
+    link1="https://blog.hammerheadcozumel.com/"
+    link2="https://blog.hammerheadcozumel.com/"
+    link3="https://blog.hammerheadcozumel.com/"
     imageurl="/image123.jpg"
   />
 </Layout>
