--- a/src/pages/snorkel.astro
+++ b/src/pages/snorkel.astro
@@ -60,9 +60,9 @@ import Layout from "../layouts/Layout.astro";
     text1="Cozumel, Mexico, boasts vibrant coral reefs and diverse marine life, offering unforgettable diving and snorkeling experiences in crystal-clear waters."
     text2="Dive into the enchanting phenomenon of bioluminescence in the ocean, where organisms emit light through chemical reactions, from tiny plankton to deep-sea fish"
     text3="Manta rays, massive yet gentle filter feeders, navigate oceans with grace, captivating observers worldwide. Threatened by habitat loss and targeted fishing, conservation efforts focus on safeguarding their habitats and regulating trade."
-    link1="/blog"
-    link2="/blog"
-    link3="/blog"
+    link1="https://blog.hammerheadcozumel.com/"
+    link2="https://blog.hammerheadcozumel.com/"
+    link3="https://blog.hammerheadcozumel.com/"
     imageurl="/image123.jpg"
   />
   <FormsToDownload />
