--- a/src/components/MainCtaBtn.astro
+++ b/src/components/MainCtaBtn.astro
@@ -1,3 +1,12 @@
+---
+interface props {
+  title: string;
+  image: string;
+  content: string;
+  alt: string;
+}
+const { title, content, image, alt } = Astro.props;
+---
 <mainCtaBtn class="main-btn-component">
   <a href="/booking" class="book-now">Book Now</a>
   <a
